--- a/Folder/index.html
+++ b/Folder/index.html
@@ -8,7 +8,14 @@
 <body>
     <div>
         <form>
-            
+            <label for="email">Email:</label>
+            <input type="email" id="Email" name="Email" required>
+            <br><br>
+            <label for="password">Password:</label>
+            <input type="password" id="Password" name="Password" required>
+            <br><br>
+            <button type="submit">Submit</button>
+            <button type="reset">Reset</button>
         </form>
     </div>
 </body>
